--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -113,7 +113,7 @@ profile::buildmaster::cloud_agents:
   ec2:
     aws-us-east-2:
       region: us-east-2
-      credentialsId: "aws-credentials"
+      credentialsId: "aws-credentials-jenkins-ci"
       sshKeysCredentialsId: "ec2-agent-ssh-2021-06"
       agent_definitions:
         - description: "Ubuntu 20.04 LTS"
