chore: update link

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1,4 +1,4 @@
-# see https://github.com/rtyler/jenkins-keys for how to handle secrets in this file
+# see https://github.com/jenkins-infra/jenkins-keys for how to handle secrets in this file
 # Debian defaults to the 'worker' module which doesn't handle HackerNews hugs
 # of death as well as I would like. the mpm_event module is much less
 # resource intensive
