--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -331,6 +331,17 @@ profile::buildmaster::default_tools:
   groovy:
     groovy: # Default version is named "groovy"
       version: "2.4.7"
+profile::buildmaster::agent_cli_tools:
+  jdk:
+    jdk8:
+      linux: /opt/jdk-8
+      windows: C:/Tools/jdk-8
+    jdk11:
+      linux: /opt/jdk-11
+      windows: C:/Tools/jdk-11
+    jdk17:
+      linux: /opt/jdk-17
+      windows: C:/Tools/jdk-17
 ldap_url: 'ldap://localhost:389'
 ldap_dn: 'dc=example,dc=com'
 ldap_admin_dn: 'cn=admin,dc=example,dc=com'
