--- a/updatecli/weekly.d/docker-ce.yaml
+++ b/updatecli/weekly.d/docker-ce.yaml
@@ -1,11 +1,17 @@
 ---
 title: Bump docker-ce version
 sources:
-  default:
+  lastDockerCePackageVersion:
     name: Get latest docker-ce version
     kind: shell
     spec:
       command: bash ./updatecli/scripts/docker-ce-updates.sh
+conditions:
+  checkIfHieradataHasDockerVersionKey:
+    kind: file
+    spec:
+      file: hieradata/common.yaml
+      matchPattern: 'docker::version:.*'
 targets:
   default:
     name: Update docker-ce version in common.yaml
