fix: limit informations returned by Apache to the strict minimum, and desactivate server signature

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -146,6 +146,8 @@ ntp::servers:
   - pool.ntp.org iburst
 apache::keepalive: 'On'
 apache::keepalive_timeout: 3
+apache::server_tokens: 'Prod'
+apache::server_signature: 'Off'
 ### Stuff for IRC jenkins-admin bot
 # access to GitHub (for creating repos, etc)
 profile::jenkinsadmin::github_login: 'jenkinsadmin'
