Add `maven-17` label for `jenkinsciinfra/inbound-agent-maven:jdk17` Docker image

--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -95,6 +95,12 @@ profile::buildmaster::cloud_agents:
             - jdk11
           cpus: 4
           memory: 8
+        - name: jnlp-maven-17
+          labels:
+            - maven-17
+            - jdk17
+          cpus: 4
+          memory: 8
         - name: jnlp-node
           cpus: 2
           memory: 4
