--- a/updatecli/weekly.d/buildmaster-tools-jdk11.yaml
+++ b/updatecli/weekly.d/buildmaster-tools-jdk11.yaml
@@ -1,5 +1,17 @@
----
 title: Bump JDK11 version (Jenkins tools) on all controllers
+
+scms:
+  default:
+    kind: github
+    spec:
+      user: "{{ .github.user }}"
+      email: "{{ .github.email }}"
+      owner: "{{ .github.owner }}"
+      repository: "{{ .github.repository }}"
+      token: "{{ requiredEnv .github.token }}"
+      username: "{{ .github.username }}"
+      branch: "{{ .github.branch }}"
+
 sources:
   default:
     kind: githubRelease
@@ -23,18 +35,17 @@ conditions:
       command: bash ./updatecli/scripts/check-jdk.sh # source input value passed as argument
 
 targets:
-  default:
+  setJDK11Version:
     name: "Bump JDK11 version on tools"
     kind: yaml
     spec:
       file: hieradata/common.yaml
       key: "profile::buildmaster::default_tools.jdk11.version"
-    scm:
-      github:
-        user: "{{ .github.user }}"
-        email: "{{ .github.email }}"
-        owner: "{{ .github.owner }}"
-        repository: "{{ .github.repository }}"
-        token: "{{ requiredEnv .github.token }}"
-        username: "{{ .github.username }}"
-        branch: "{{ .github.branch }}"
+    scmID: default
+
+pullrequests:
+  default:
+    kind: github
+    scmID: default
+    targets:
+      - setJDK11Version
