chore(updatecli) remove warnings
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/weekly.d/openvpn.yaml
+++ b/updatecli/weekly.d/openvpn.yaml
@@ -30,6 +30,8 @@ conditions:
     kind: dockerImage
     spec:
       image: "jenkinsciinfra/openvpn"
+      architecture: amd64
+      # Tag comes from the source input value
   checkIfKeyExist:
     kind: file
     disablesourceinput: true
