feat(trusted.ci) add jdk11 related labels for VM agents
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/clients/trusted-ci.yaml
+++ b/hieradata/clients/trusted-ci.yaml
@@ -46,6 +46,8 @@ profile::buildmaster::cloud_agents:
           - java
           - linux
           - docker
+          - maven-11
+          - jdk11
         idleTerminationMinutes: 5
         maxInstances: 7 # Quota of 56 vCPUs
         useAsMuchAsPosible: true
