--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -66,7 +66,7 @@ profile::buildmaster::cloud_agents:
       max_capacity: 150 # TODO: define correct values for Digital Ocean
       url: https://SuperSecretThatShouldBeEncryptedInProduction
       agent_definitions:
-        - name: test-doks
+        - name: jnlp
           cpus: 2
           memory: 4
           # labels:
