chore(openvpn) migrate server-specific openvpn settings into their own client-level hieradata
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/weekly.d/openvpn.yaml
+++ b/updatecli/weekly.d/openvpn.yaml
@@ -44,7 +44,7 @@ targets:
     name: "Update Docker Image tag for jenkinsciinfra/openvpn:latest"
     kind: yaml
     spec:
-      file: "hieradata/common.yaml"
+      file: hieradata/common.yaml
       key: "profile::openvpn::image_tag"
     scmID: default
 
