--- a/updatecli/weekly.d/docker-ce.yaml
+++ b/updatecli/weekly.d/docker-ce.yaml
@@ -24,7 +24,7 @@ conditions:
     kind: file
     spec:
       file: hieradata/common.yaml
-      matchPattern: 'docker::version:.*'
+      matchpattern: "docker::version:.*"
 targets:
   default:
     name: Update docker-ce version in common.yaml
@@ -32,11 +32,11 @@ targets:
     spec:
       file: hieradata/common.yaml
       key: "docker::version"
-    scmID: default
+    scmid: default
 
 pullrequests:
   default:
     kind: github
-    scmID: default
+    scmid: default
     targets:
       - default
