--- a/updatecli/weekly.d/buildmaster-tools-jdk11.yaml
+++ b/updatecli/weekly.d/buildmaster-tools-jdk11.yaml
@@ -14,7 +14,7 @@ scms:
 
 sources:
   default:
-    kind: githubRelease
+    kind: githubrelease
     name: Get the latest Adoptium JDK11 version
     spec:
       owner: "adoptium"
@@ -26,7 +26,7 @@ sources:
         # jdk-11.0.12+7(https://github.com/adoptium/temurin11-binaries/releases/tag/jdk-11.0.12%2B7) is OK
         pattern: "^jdk-11.(\\d*).(\\d*).(\\d*)+(\\d*)$"
     transformers:
-      - trimPrefix: "jdk-"
+      - trimprefix: "jdk-"
 
 conditions:
   checkIfReleaseIsAvailable:
