--- a/updatecli/weekly.d/buildmaster-tools-jdk17.yaml
+++ b/updatecli/weekly.d/buildmaster-tools-jdk17.yaml
@@ -14,7 +14,7 @@ scms:
 
 sources:
   default:
-    kind: githubRelease
+    kind: githubrelease
     name: Get the latest Adoptium JDK17 version
     spec:
       owner: "adoptium"
@@ -26,7 +26,7 @@ sources:
         # jdk-17.0.2+8(https://github.com/adoptium/temurin17-binaries/releases/tag/jdk-17.0.2%2B8) is OK
         pattern: "^jdk-17.(\\d*).(\\d*).(\\d*)+(\\d*)$"
     transformers:
-      - trimPrefix: "jdk-"
+      - trimprefix: "jdk-"
 
 conditions:
   checkIfReleaseIsAvailable:
