--- a/updatecli/weekly.d/docker-ce.yaml
+++ b/updatecli/weekly.d/docker-ce.yaml
@@ -19,12 +19,15 @@ sources:
     kind: shell
     spec:
       command: bash ./updatecli/scripts/docker-ce-updates.sh
+
 conditions:
   checkIfHieradataHasDockerVersionKey:
     kind: file
+    disablesourceinput: true
     spec:
       file: hieradata/common.yaml
       matchpattern: "docker::version:.*"
+
 targets:
   default:
     name: Update docker-ce version in common.yaml
