fix(buildmaster) set disk size to 128Gb globally for Windows VM agents
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -213,7 +213,7 @@ profile::buildmaster::agents_setup:
     agentDir: 'C:\\Jenkins'
     tempDir: 'C:\\\\temp'
     remoteAdmin: Administrator
-    osDiskSize: 90
+    osDiskSize: "128"
   ubuntu:
     agentDir: "/home/jenkins"
     remoteAdmin: jenkins
