--- a/updatecli/weekly.d/buildmaster-agents.yaml
+++ b/updatecli/weekly.d/buildmaster-agents.yaml
@@ -104,8 +104,27 @@ sources:
           values: "prod"
         - name: "tag:version"
           values: '{{ source "packerImageVersion" }}'
-
+  getWindowsVMAgentsDiskSize:
+    kind: file
+    depends_on:
+      - packerImageVersion
+    spec:
+      file: 'https://raw.githubusercontent.com/jenkins-infra/packer-images/{{ source `packerImageVersion` }}/locals.pkr.hcl'
+      # matchpattern can only retrieve the full line. A transformer is required after to strip the unused content
+      matchpattern: 'windows_disk_size_gb = (.*)'
+    transformers:
+      ## Retrieve only the integer (ignore whitespaces, comments, etc.)
+      - findsubmatch:
+          pattern: 'windows_disk_size_gb = (\d*)'
+          captureindex: 1
 targets:
+  setWindowsVMAgentDiskSize:
+    sourceid: getWindowsVMAgentsDiskSize
+    kind: yaml
+    spec:
+      file: hieradata/common.yaml
+      key: "profile::buildmaster::agents_setup.windows.osDiskSize"
+    scmid: default
   setAzureGalleryImageVersion:
     sourceid: packerImageVersion
     name: "Bump Azure Gallery Image Version"
