Fix(buildmasters) set windows vm agents disk size to 128Gb + track the value (#2180)
* feat(buildmaster) define Jenkins VM agent disk size at common level but keep the per-template override

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* fix(buildmaster) set disk size to 128Gb globally for Windows VM agents

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* chore(updatecli) track windows VM agent disk size for buildmasters

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -213,10 +213,12 @@ profile::buildmaster::agents_setup:
     agentDir: 'C:\\Jenkins'
     tempDir: 'C:\\\\temp'
     remoteAdmin: Administrator
+    osDiskSize: "128"
   ubuntu:
     agentDir: "/home/jenkins"
     remoteAdmin: jenkins
     tempDir: "/tmp"
+    osDiskSize: 90
 profile::buildmaster::agent_images:
   ec2_amis:
     ubuntu-amd64: "ami-0b613ed394048f189"
