chore(updatecli) fix syntax error on the buildmaster-agents manifest
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/weekly.d/buildmaster-agents.yaml
+++ b/updatecli/weekly.d/buildmaster-agents.yaml
@@ -120,6 +120,7 @@ sources:
 targets:
   setWindowsVMAgentDiskSize:
     sourceid: getWindowsVMAgentsDiskSize
+    name: "Change the Azure VM agents disk size"
     kind: yaml
     spec:
       file: hieradata/common.yaml
