--- a/hieradata/clients/pkg.yaml
+++ b/hieradata/clients/pkg.yaml
@@ -1,3 +1,6 @@
 ---
+# https://www.liquidweb.com/kb/apache-performance-tuning-swap-memory/
+# trashing point, with ~30 Gb of RAM and ~500Mb (worst-case full apache) means around 50.
+# We are conservative and keep 30 (to be monitored and validated)
 apache::mod::event::serverlimit: '30' #default 25
 apache::mod::event::maxrequestworkers: '750' #ServerLimit * 25
