--- a/hieradata/clients/pkg.yaml
+++ b/hieradata/clients/pkg.yaml
@@ -3,4 +3,6 @@
 # trashing point, with ~30 Gb of RAM and ~500Mb (worst-case full apache) means around 50.
 # We are conservative and keep 30 (to be monitored and validated)
 apache::mod::event::serverlimit: '30' #default 25
-apache::mod::event::maxrequestworkers: '750' #ServerLimit * 25
+# https://httpd.apache.org/docs/2.4/fr/mod/mpm_common.html#maxrequestworkers
+# maxrequestworkers = ServerLimit (see value above) * ThreadsPerChild (default: 25)
+apache::mod::event::maxrequestworkers: '750'
